Updated to openHab 3.1.0 version