@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2020 Contributors to the openHAB project
+ * Copyright (c) 2010-2021 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -16,9 +16,7 @@ import static org.openhab.binding.enocean.internal.EnOceanBindingConstants.*;
 
 import java.io.IOException;
 import java.math.BigDecimal;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.HashSet;
 import java.util.LinkedList;
 import java.util.Set;
 import java.util.concurrent.ScheduledFuture;
@@ -70,7 +68,7 @@ public class EnOceanBridgeHandler extends ConfigStatusBridgeHandler implements T
 
     private Logger logger = LoggerFactory.getLogger(EnOceanBridgeHandler.class);
 
-    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES = new HashSet<>(Arrays.asList(THING_TYPE_BRIDGE));
+    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES = Set.of(THING_TYPE_BRIDGE);
 
     private EnOceanTransceiver transceiver; // holds connection to serial/tcp port and sends/receives messages
     private ScheduledFuture<?> connectorTask; // is used for reconnection if something goes wrong
@@ -88,7 +86,6 @@ public class EnOceanBridgeHandler extends ConfigStatusBridgeHandler implements T
 
     @Override
     public void handleCommand(ChannelUID channelUID, Command command) {
-
         if (transceiver == null) {
             updateStatus(ThingStatus.OFFLINE);
             return;
@@ -99,7 +96,6 @@ public class EnOceanBridgeHandler extends ConfigStatusBridgeHandler implements T
                 if (command instanceof RefreshType) {
                     sendMessage(ESP3PacketFactory.CO_RD_REPEATER,
                             new ResponseListenerIgnoringTimeouts<RDRepeaterResponse>() {
-
                                 @Override
                                 public void responseReceived(RDRepeaterResponse response) {
                                     if (response.isValid() && response.isOK()) {
@@ -112,7 +108,6 @@ public class EnOceanBridgeHandler extends ConfigStatusBridgeHandler implements T
                 } else if (command instanceof StringType) {
                     sendMessage(ESP3PacketFactory.CO_WR_REPEATER((StringType) command),
                             new ResponseListenerIgnoringTimeouts<BaseResponse>() {
-
                                 @Override
                                 public void responseReceived(BaseResponse response) {
                                     if (response.isOK()) {
@@ -126,15 +121,12 @@ public class EnOceanBridgeHandler extends ConfigStatusBridgeHandler implements T
             case CHANNEL_SETBASEID:
                 if (command instanceof StringType) {
                     try {
-
                         byte[] id = HexUtils.hexToBytes(((StringType) command).toFullString());
 
                         sendMessage(ESP3PacketFactory.CO_WR_IDBASE(id),
                                 new ResponseListenerIgnoringTimeouts<BaseResponse>() {
-
                                     @Override
                                     public void responseReceived(BaseResponse response) {
-
                                         if (response.isOK()) {
                                             updateState(channelUID, new StringType("New Id successfully set"));
                                         } else if (response.getResponseType() == ResponseType.RET_FLASH_HW_ERROR) {
@@ -147,7 +139,6 @@ public class EnOceanBridgeHandler extends ConfigStatusBridgeHandler implements T
                                         }
                                     }
                                 });
-
                     } catch (IllegalArgumentException e) {
                         updateState(channelUID, new StringType("BaseId could not be parsed"));
                     }
@@ -161,7 +152,6 @@ public class EnOceanBridgeHandler extends ConfigStatusBridgeHandler implements T
 
     @Override
     public void initialize() {
-
         updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.CONFIGURATION_PENDING, "trying to connect to gateway...");
         if (this.serialPortManager == null) {
             updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.CONFIGURATION_ERROR,
@@ -176,7 +166,6 @@ public class EnOceanBridgeHandler extends ConfigStatusBridgeHandler implements T
 
             if (connectorTask == null || connectorTask.isDone()) {
                 connectorTask = scheduler.scheduleWithFixedDelay(new Runnable() {
-
                     @Override
                     public void run() {
                         if (thing.getStatus() != ThingStatus.ONLINE) {
@@ -189,9 +178,7 @@ public class EnOceanBridgeHandler extends ConfigStatusBridgeHandler implements T
     }
 
     private synchronized void initTransceiver() {
-
         try {
-
             EnOceanBridgeConfig c = getThing().getConfiguration().as(EnOceanBridgeConfig.class);
             if (transceiver != null) {
                 transceiver.ShutDown();
@@ -206,7 +193,6 @@ public class EnOceanBridgeHandler extends ConfigStatusBridgeHandler implements T
                     break;
                 default:
                     break;
-
             }
 
             updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.CONFIGURATION_PENDING, "opening serial port...");
@@ -235,10 +221,8 @@ public class EnOceanBridgeHandler extends ConfigStatusBridgeHandler implements T
                 logger.debug("request base id");
                 transceiver.sendBasePacket(ESP3PacketFactory.CO_RD_IDBASE,
                         new ResponseListenerIgnoringTimeouts<RDBaseIdResponse>() {
-
                             @Override
                             public void responseReceived(RDBaseIdResponse response) {
-
                                 logger.debug("received response for base id");
                                 if (response.isValid() && response.isOK()) {
                                     baseId = response.getBaseId().clone();
@@ -259,10 +243,8 @@ public class EnOceanBridgeHandler extends ConfigStatusBridgeHandler implements T
             logger.debug("request version info");
             transceiver.sendBasePacket(ESP3PacketFactory.CO_RD_VERSION,
                     new ResponseListenerIgnoringTimeouts<RDVersionResponse>() {
-
                         @Override
                         public void responseReceived(RDVersionResponse response) {
-
                             if (response.isValid() && response.isOK()) {
                                 updateProperty(PROPERTY_APP_VERSION, response.getAPPVersion());
                                 updateProperty(PROPERTY_API_VERSION, response.getAPIVersion());
